fixed photo alignment, added padding to header.

--- a/MiniProjects/KL_ProfWebsite/style.css
+++ b/MiniProjects/KL_ProfWebsite/style.css
@@ -33,7 +33,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 200px;
-    padding-top: 10px;
+    padding-top: 30px;
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 110px;
@@ -78,11 +78,17 @@ body {
 }
 
 #profile #pfp {
-    width: 220px;
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
     clip-path: circle();
-    margin-top: -160px;
+    margin-top: -150px;
+    flex: 1;
+}
+
+@media (max-width: 540px){ /* on veiwports 540px wide or less, adjusts alignment */
+    #profile #pfp {
+        margin-top: -140px;
+    }
 }
 
 #profile #infoContainer .icon{
